# Techniki_efektywnego_programowania

Lab1/: CMakeLists.txt  Table.cpp  Table.h  main.cpp
Lab1/lab1/: CMakeLists.txt  ConstansValuesFor123Tasks.h  Main.cpp  Table.cpp  Table.h
Lab1/modyfikacja/: CMakeLists.txt  main.cpp
Laboratorium1/: CMakeLists.txt  Table.cpp  Table.h  constansValuesFor123.h  constans_values.h  zadanie123.cpp
Laboratorium2/: Base256Number.cpp  Base256Number.h  CMakeLists.txt  Number.cpp  Number.h  main.cpp
Laboratorium2/Modyfikacja/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  Number.cpp  Number.h  main.cpp
Laboratorium2/Zadanie/: CMakeLists.txt  Number.cpp  main.cpp
Laboratorium3/Modyfikacja/: Interface.cpp  Node.cpp  Result.cpp  Result.h  Tree.cpp  Tree.h  TypeChecker.cpp  TypeChecker.h
Laboratorium4/Zadanie/: CMakeLists.txt  ErrorCode.h  Interface.cpp  Interface.h  Result.cpp  Result.h  Result.tpp  ResultSaver.h  ResultSaver.tpp  Tree.cpp  Tree.h  file.txt
Laboratorium5/Zadanie/: CMakeLists.txt  file.txt  main.cpp  testy.txt
Laboratorium5/Zadanie/Result/: Error.h  ResultSaver.h
Laboratorium5/Zadanie/SmartPointer/: RefCounter.cpp  RefCounter.h  SmartPointer.h
Laboratorium5/Zadanie/Tree/: Interface.cpp  Interface.h  Tree.cpp  Tree.h
MiniProjekt/: CMakeLists.txt  ConstantValues.h  Evaluator.cpp  Evaluator.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  InstanceReader.cpp  InstanceReader.hpp  ProblemData.cpp  ProblemData.hpp  ProblemLoader.cpp  ProblemLoader.hpp  RandomGenerator.cpp  RandomGenerator.h  VrpInstance.cpp  VrpInstance.hpp  main.cpp
MiniProjekt/Errors/: Error.cpp  Error.h  Result.h
MiniProjekt/data/lcvrp/Vrp-Set-A/: A-n31-mojTest.lcvrp
(+34 files in other folders)
